Fix profile links layout bug.

--- a/htdocs/css/main.css
+++ b/htdocs/css/main.css
@@ -54,6 +54,10 @@ a:hover {
     color: #8D8D8D;
 }
 
+#profiles a {
+    text-decoration: none;
+}
+
 #links, #profiles {
     padding-top: 25px;
 }
